2008-05-16  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc.el: Remove my analysis of SCCS/RCS concurrency issues from
	the end of the file, it was good work at one time but has been
	stale since 1995 and may now be actively misleading.
	* vc-cvs.el (vc-cvs-status-extra-headers): Extract and display the
	CVS repository and module (assumptions for the latter a bit iffy).
	* vc-svn.el (vc-svn-status-extra-headers): Extract and display the
	SVN repository.

2008-05-16  Juanma Barranquero  <lekktu@gmail.com>

	* vc-rcs.el (vc-rcs-create-tag):
	* vc-sccs.el (vc-sccs-create-tag):
	Fix typo in error message and pass backend arg.

2008-05-15  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-file-name-for-operation): Add `make-temp-name'.

2008-05-15  Teodor Zlatanov  <tzz@lifelogs.com>

	* net/tramp.el: Load auth-source library.
	(tramp-read-passwd): Use it for password, not login.

2008-05-15  Shigeru Fukaya  <shugeru.fukaya@gmail.com>

	* ses.el (ses-goto-print): Use move-to-column rather than
	forward-char.
	(ses-print-cell): Use string-width, truncate-string-to-width,
	delete-region rather than length, substring, delete-char.
	(ses-setup): Set inhibit-point-motion-hooks to t.  Calculate
	position by actually moving point rather than just using unibyte
	character length.
	(ses-mode): Set indent-tabs-mode to nil.
	(ses-center): Use string-width rather than length.

2008-05-15  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc-cvs.el, vc-git.el, vc-hg.el, vc-hooks.el, vc-mcvs.el,
	* vc-rcs.el, vc-sccs.el, vc-svn.el, vc.el: Rename
	vc-*-create-snapshot and vc-*-retrieve-snapshot to vc-*-create-tag
	and vc-*-retrieve-tag respectively.

	* vc-dispatcher.el: Fix an incorrect buffer name and remove an
	unneeded defalias.

	* vc.el, vc-dispatcher.el (vc-dir-menu-map-filter): Moved.

	* vc.el, vc-dispatcher.el (vc-dir-menu-map): Remove assumption
	about buffer names.

2008-05-15  Glenn Morris  <rgm@gnu.org>
